fix: style scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -316,3 +316,19 @@ code {
   padding-top: 20px;
   background-color: #141414;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #141414;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #303030;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #242424;
+}
